# hetero-viz

./: CMakeLists.txt  README.md  package.xml
database/: 0_HOUSE_actionStatus.npy  0_HOUSE_actions.npy  0_HOUSE_goals.npy  0_HOUSE_neigh.npy  0_HOUSE_starts.npy  0_HOUSE_svo_avg.npy  0_HOUSE_svo_distri.npy  0_MAZE_actionStatus.npy  0_MAZE_actions.npy  0_MAZE_goals.npy  0_MAZE_neigh.npy  0_MAZE_starts.npy  0_MAZE_svo_avg.npy  0_MAZE_svo_distri.npy  0_RANDOM_actionStatus.npy  0_RANDOM_actions.npy  0_RANDOM_goals.npy  0_RANDOM_neigh.npy  0_RANDOM_starts.npy  0_RANDOM_svo_avg.npy  0_RANDOM_svo_distri.npy  actionPlan.npy  bookstore_start_n_goal_pos.npy  graph-100-10.txt  graph-30-10.txt  hospital_start_n_goal_pos.npy  pickle_taskList.txt  pickle_test.txt  rawData.txt  tasklist-100-10.txt  tasklist-30-10.txt
driverCodes/: demonstration_driver.launch  demonstration_driver.py  marmot_driver.py  robot_spawn.py  write_demo_driver.py
launch/: base.launch  demonstration.launch  empty_world.launch  oneRealRobot.launch  oneRealSet.launch  oneRobot.launch  oneSet.launch  oneSpoofGoal.launch  oneSpoofRobot.launch  oneSpoofSet.launch  slam.launch  spawnGoalPole.launch  two_robot.launch  vrpn.launch
map/: bookstore.pgm  bookstore.yaml  bright  demonstration.pgm  demonstration.yaml  house_map.yaml  map2.pgm  map2.yaml  map_karto.pgm  map_karto.yaml  mymap.pgm  mymap.yaml  warehouse.pgm  warehouse.yaml
msg/: ROS_SVO_Task.msg  ROS_Task.msg  TD_next.msg
otherTempCode/: actions.txt  autoSsh.ipynb  checkBattery.ipynb  chengyang.ipynb  debug_all.txt  debug_central.txt  extractActions.ipynb  getPositions.ipynb  kill.ipynb  stuffWithMap.ipynb  temp.ipynb  temp.npy  temp2.ipynb  usefulFunctions.ipynb  usefulFunctions.py
render/: render.py
rviz/: agent  dynamic_rviz copy.rviz  dynamic_rviz.rviz  part1  part2  rviz.rviz  static_rviz.rviz
scripts/: autossh.py  chengyang.py  graphCentral.py  graphController.py  graphDriver.py  outCentral.txt  outputTD.txt  realController.py  realRobotTransform.py  run_robots.py  spoofGoalTransform.py  spoofRobotTransform.py
urdf/: TD_custom.xacro  custom2.urdf  goalPole.xacro  simple.xacro
worlds/: empty_world.world  temp.world  (+2 more)
(+1 files in other folders)
